devel
-----

* Fix SEARCH-350: Crash during consolidation.

* SEARCH-357: Added SUBSTRING_BYTES function.

* A new Pregel algorithm: the version of Hypertext-Induced Topic Search (HITS)
as described in the original paper.

* Web UI: Reduce size and initial render height of a modal (fixes BTS-940).

* Disable optimization rule to avoid crash (BTS-951).

* Fix comparison of JSON schemas on DB servers after there was a schema change
  via a coordinator: the schema comparison previously did not take into account
  that some ArangoDB versions store an internal `{"type":"json"}` attribute in
  the schema, and some don't. Thus two identical schemas could compare 
  differently.
  The correct schema version was always applied and used, and validation of
  documents against the schema was also not affected. However, because two
  schemas could compare unequal, this could have caused unnecessary repeated
  work for background maintenance threads.

* Removed transitive node dependencies.

* Web UI: Now correctly handles the server error response when an error occurred
  during the modification of a document or an edge (BTS-934).

* Make graph search case-insensitive (fixes BTS-882).

* BTS-428: Added function DATE_ISOWEEKYEAR that retrieves the number of the
  week counting from when the year started in ISO calendar and also the year
  it's in.

* Added handling of requests with Transfer-Encodign chunked, which is 
  not implemented, so returns code HTTP code 501.

* Add progress reporting to RocksDB WAL recovery, in case there are many WAL
  files to recover.

* Updated ArangoDB Starter to 0.15.5-preview-2.

* Fixed BTS-918 (incorrectly navigating back 1 level in history when a modal-dialog element is present).

* Updated arangosync to v2.12.0-preview-9.

* Disallowed index creation that covers fields in which the field's name starts
  or ends with `:` for single server or cluster when the instance is a